--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -51,12 +51,12 @@
         <item name="fontPath">@string/font_path_alegreya</item>
     </style>
 
-    <style name="TextAppearance.LLL.Overlay1" parent="TextAppearance.AppCompat.Display1">
+    <style name="TextAppearance.LLL.Overlay1" parent="TextAppearance.AppCompat.Subhead">
         <item name="android:textColor">@android:color/white</item>
         <item name="fontPath">@string/font_path_fira_mono_bold</item>
     </style>
 
-    <style name="TextAppearance.LLL.Overlay2" parent="TextAppearance.AppCompat.Display1">
+    <style name="TextAppearance.LLL.Overlay2" parent="TextAppearance.AppCompat.Subhead">
         <item name="android:textColor">@android:color/white</item>
         <item name="fontPath">@string/font_path_merriweather_black</item>
     </style>
