--- a/app/src/main/res/values/fonts.xml
+++ b/app/src/main/res/values/fonts.xml
@@ -18,9 +18,14 @@
     <!-- Actor -->
     <string name="font_path_actor">fonts/actor/Actor-Regular.ttf</string>
     <!-- Alegreya -->
-    <string name="font_path_alegreya">fonts/alegreya/Alegreya-Bold.ttf</string>
+    <string name="font_path_alegreya_black">fonts/alegreya/Alegreya-Black.ttf</string>
+    <string name="font_path_alegreya_bold">fonts/alegreya/Alegreya-Bold.ttf</string>
+    <string name="font_path_alegreya_regular">fonts/alegreya/Alegreya-Regular.ttf</string>
+    <!-- Clear Sans -->
+    <string name="font_path_clear_sans">fonts/clearsans/ClearSans-Medium.ttf</string>
     <!-- Fira Mono -->
     <string name="font_path_fira_mono_bold">fonts/firamono/FiraMono-Bold.ttf</string>
     <!-- Merriweather -->
     <string name="font_path_merriweather_black">fonts/merriweather/Merriweather-Black.ttf</string>
+    <string name="font_path_merriweather_regular">fonts/merriweather/Merriweather-Regular.ttf</string>
 </resources>
